# ClashMeta

./: .gitignore  .gitmodules  README.md  build-profile.json5  xmlToSvg.py
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5
entry/src/foss/golang/: go.mod  go.sum
entry/src/foss/golang/clash/: main.go
entry/src/foss/golang/clash/dns/: dhcp.go  patch_common.go  patch_linux.go
entry/src/foss/golang/clash/hub/: hub.go
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  bridge.h  myapp.h  napi_init.cpp
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/entryability/: ClashViewModel.ts  ClashVpnService.ets  EntryAbility.ets  ProfileRepo.ets  ProfileViewModel.ets  SelectionRepo.ets
entry/src/main/ets/ipc/: ClashProxyService.ets  ClashStubService.ets  ClashVpnAbility.ets  IClashManager.ts
entry/src/main/ets/pages/: ConfigEditPage.ets  ConfigItemEdit.ets  ConfigViewer.ets  Index.ets  LogsPage.ets  ProviderPage.ets  ProxyPage.ets  SettingsPage.ets  logs.ts
entry/src/main/ets/pages/compoments/: common.ets  icons.ets
entry/src/main/ets/rpc/: EventConstants.ets  RpcRequest.ts  SocketProxyService.ets  SocketStubService.ets
entry/src/main/ets/utils/: BackgroundService.ets
entry/src/main/golang/: build.ps1  build.sh  go.mod  myapp.h
entry/src/main/golang/native/: app.go  bridge.c  bridge.h  debug.go  log.go  main.go  trace.c  trace.h  tun.go
entry/src/main/golang/native/all/: imports.go
entry/src/main/golang/native/app/: dns.go  (+1 more)
entry/src/main/golang_blob/: blob.go  go.mod
(+33 files in other folders)
